# darpi

./: Cargo.toml  README.md
darpi-code-gen/: Cargo.toml
darpi-code-gen/src/: app.rs  handler.rs  job.rs  lib.rs  logger.rs  middleware.rs  request.rs
darpi-code-gen/tests/: it_works.rs  qqqqqq.rs  qwdqwd.rs
darpi-graphql/: Cargo.toml
darpi-graphql/src/: lib.rs
darpi-headers/src/: lib.rs
darpi-middleware/: Cargo.toml
darpi-middleware/src/: auth.rs  compression.rs  lib.rs
darpi-route/: Cargo.toml
darpi-web/: Cargo.toml
darpi-web/src/: handler.rs  job.rs  json.rs  lib.rs  logger.rs  middleware.rs  request.rs  response.rs  route.rs  sync.rs  xml.rs  yaml.rs
src/: app.rs  expand.rs  lib.rs  main.rs  route.rs
tests/: blah.rs  foo.rs  formatter.rs  graphql.rs  inject.rs  it_works.rs  job.rs  middleware.rs  test_dependencies.rs
