[package]
name = "darpi"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "darpi-code-gen",
    "darpi-web"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
futures = "0.3.8"
tokio = {version = "0.2.11", features = ["full"]}
static_assertions = "1.1.0"
shaku = {version = "0.5.0", features = ["thread_safe"]}
http = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
seq-macro = "0.2.1"

darpi-web = { path = "./darpi-web" }
darpi-code-gen = { path = "./darpi-code-gen" }