[package]
name = "darpi"
version = "0.1.1"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A web framework with type safety and speed in mind"
license = "MIT OR Apache-2.0"
repository = "https://github.com/petar-dambovaliev/darpi.git"

[workspace]
members = [
    "darpi-code-gen",
    "darpi-web",
    "darpi-route",
    "darpi-middleware"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
futures = "0.3.8"
shaku = {version = "0.5.0", features = ["thread_safe"]}
http = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
darpi-web = { version = "0.1.0" }
darpi-code-gen = { version = "0.1.0" }
darpi-route = { version = "0.1.0" }

[dev-dependencies]
tokio = {version = "0.2.11", features = ["full"]}
jsonwebtoken = "=7.2"
futures-util = "0.3.8"
derive_more = "0.99.11"
async-trait = "0.1.42"
darpi-middleware = { path = "./darpi-middleware" }