[package]
name = "darpi-code-gen"
version = "0.0.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
description = "code generation for the web api framework darpi"
keywords = ["darpi-code-gen", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"]}
md5 = "0.7.0"
darpi-web = { path = "../darpi-web" }


[dev-dependencies]
http = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13.9"
shaku = "0.5.0"
tokio = {version = "0.2.11", features = ["full"]}
