[package]
name = "darpi-middleware"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darpi-web = { path = "../darpi-web" }
darpi-code-gen = { path = "../darpi-code-gen" }
hyper = "0.13.9"
darpi = {path = "../../darpi"}