[package]
name = "darpi-middleware"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"
description = "A set of middlewares for darpi"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darpi-web = {version = "0.1.0" }
darpi-code-gen = { path = "../darpi-code-gen" }
hyper = "0.13.9"
darpi = { version = "0.1.0" }
