[package]
name = "darpi-web"
version = "0.1.0"
authors = ["Petar Dambovaliev <petar.atanasov.1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_urlencoded = "0.7.0"
derive_more = "0.99.11"
serde = "1.0.118"
http = "0.2.1"